--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
             <div class="leaderboard-card-logo">
               <img src="./images/new-york-yankees.png" alt="New York Yankees" />
             </div>
-            <div class="leaderboard-card-text">NEW YORK YANKEES</div>
+            <h4 class="leaderboard-card-text">NEW YORK YANKEES</h4>
             <div class="leaderboard-card-stats">
               <div class="leaderboard-card-donated-col">
                 <p class="leaderboard-card-number-values">$8,227</p>
-                <p class="leaderboard-card-donated-text">Donated</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Donated
+                </p>
               </div>
               <div class="leaderboard-card-fans-donating-col">
                 <p class="leaderboard-card-number-values">18</p>
-                <p class="leaderboard-card-fans-donating-text">Fans Donating</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Fans Donating
+                </p>
               </div>
             </div>
           </div>
@@ -54,15 +58,19 @@
             <div class="leaderboard-card-logo">
               <img src="./images/texas-rangers.png" alt="Texas Rangers" />
             </div>
-            <div class="leaderboard-card-text">TEXAS RANGERS</div>
+            <h4 class="leaderboard-card-text">TEXAS RANGERS</h4>
             <div class="leaderboard-card-stats">
               <div class="leaderboard-card-donated-col">
                 <p class="leaderboard-card-number-values">$2,244</p>
-                <p class="leaderboard-card-donated-text">Donated</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Donated
+                </p>
               </div>
               <div class="leaderboard-card-fans-donating-col">
                 <p class="leaderboard-card-number-values">4</p>
-                <p class="leaderboard-card-fans-donating-text">Fans Donating</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Fans Donating
+                </p>
               </div>
             </div>
           </div>
@@ -75,15 +83,19 @@
             <div class="leaderboard-card-logo">
               <img src="./images/new-york-mets.png" alt="New York Mets" />
             </div>
-            <div class="leaderboard-card-text">NEW YORK METS</div>
+            <h4 class="leaderboard-card-text">NEW YORK METS</h4>
             <div class="leaderboard-card-stats">
               <div class="leaderboard-card-donated-col">
                 <p class="leaderboard-card-number-values">$761</p>
-                <p class="leaderboard-card-donated-text">Donated</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Donated
+                </p>
               </div>
               <div class="leaderboard-card-fans-donating-col">
                 <p class="leaderboard-card-number-values">6</p>
-                <p class="leaderboard-card-fans-donating-text">Fans Donating</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Fans Donating
+                </p>
               </div>
             </div>
           </div>
@@ -96,15 +108,19 @@
             <div class="leaderboard-card-logo">
               <img src="./images/chicago-cubs.png" alt="Chicago Cubs" />
             </div>
-            <div class="leaderboard-card-text">CHICAGO CUBS</div>
+            <h4 class="leaderboard-card-text">CHICAGO CUBS</h4>
             <div class="leaderboard-card-stats">
               <div class="leaderboard-card-donated-col">
                 <p class="leaderboard-card-number-values">$563</p>
-                <p class="leaderboard-card-donated-text">Donated</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Donated
+                </p>
               </div>
               <div class="leaderboard-card-fans-donating-col">
                 <p class="leaderboard-card-number-values">3</p>
-                <p class="leaderboard-card-fans-donating-text">Fans Donating</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Fans Donating
+                </p>
               </div>
             </div>
           </div>
@@ -120,15 +136,19 @@
                 alt="San Francisco Giants"
               />
             </div>
-            <div class="leaderboard-card-text">SAN FRANCISCO GIANTS</div>
+            <h4 class="leaderboard-card-text">SAN FRANCISCO GIANTS</h4>
             <div class="leaderboard-card-stats">
               <div class="leaderboard-card-donated-col">
                 <p class="leaderboard-card-number-values">$504</p>
-                <p class="leaderboard-card-donated-text">Donated</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Donated
+                </p>
               </div>
               <div class="leaderboard-card-fans-donating-col">
                 <p class="leaderboard-card-number-values">5</p>
-                <p class="leaderboard-card-fans-donating-text">Fans Donating</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Fans Donating
+                </p>
               </div>
             </div>
           </div>
@@ -141,15 +161,19 @@
             <div class="leaderboard-card-logo">
               <img src="./images/boston-red-sox.png" alt="Boston Red Sox" />
             </div>
-            <div class="leaderboard-card-text">BOSTON RED BOX</div>
+            <h4 class="leaderboard-card-text">BOSTON RED BOX</h4>
             <div class="leaderboard-card-stats">
               <div class="leaderboard-card-donated-col">
                 <p class="leaderboard-card-number-values">$501</p>
-                <p class="leaderboard-card-donated-text">Donated</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Donated
+                </p>
               </div>
               <div class="leaderboard-card-fans-donating-col">
                 <p class="leaderboard-card-number-values">4</p>
-                <p class="leaderboard-card-fans-donating-text">Fans Donating</p>
+                <p class="leaderboard-card-donated-amount-and-fans-text">
+                  Fans Donating
+                </p>
               </div>
             </div>
           </div>
