--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
         </div>
       </div>
 
-      <div class="ribbon-container">
-        <p class="ribbon-text">SEE WHICH TEAMS HAVE THE MOST GENEROUS FANS</p>
-        <img class="ribbon-img" src="./images/ribbon.png" alt="Ribbon" />
-      </div>
+      <a href="#">
+        <div class="ribbon-container">
+          <p class="ribbon-text">SEE WHICH TEAMS HAVE THE MOST GENEROUS FANS</p>
+          <img class="ribbon-img" src="./images/ribbon.png" alt="Ribbon" />
+        </div>
+      </a>
     </div>
   </body>
 </html>
